syntax = "proto3";

package types;

option go_package = "github.com/vultisig/recipes/types";

// ResourcePath represents a parsed resource path
message ResourcePath {
  // ChainID is the blockchain identifier
  string chain_id = 1;

  // ProtocolID is the protocol identifier
  string protocol_id = 2;

  // FunctionID is the function identifier
  string function_id = 3;

  // Full is the complete resource path
  string full = 4;
}

// Permission represents a user-facing permission for UI display
message Permission {
  // Unique identifier (e.g., "transaction_signing", "fee_deduction", "balance_visibility")
  string id = 1;

  // Display label (e.g., "Access to transaction signing")
  string label = 2;

  // Tooltip text (e.g., "The app can initiate transactions to swap assets in your Vault")
  string description = 3;
}
