syntax = "proto3";

package thorchain.v1;

option go_package = "github.com/vultisig/recipes/types";

// Coin represents a token with denomination and amount
message Coin {
  string denom = 1;
  string amount = 2;
}

// MsgDeposit represents THORChain's MsgDeposit message for swaps/deposits
message MsgDeposit {
  // Coins being deposited
  repeated Coin coins = 1;

  // Memo contains swap instructions including destination address
  string memo = 2;

  // Signer is the address of the depositor
  string signer = 3;
}
